--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
+    "noUncheckedIndexedAccess": true,
     "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
