--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "commander": "^12.1.0",
     "dockerode": "^4.0.2",
+    "env-paths": "^3.0.0",
     "figlet": "^1.7.0"
   },
   "devDependencies": {
