refactor + feat: transpile to es modules and implement env-paths
- Changed module to `esnext` from `commonjs` in tsconfig
- Storing state data using env-paths to support multiple os

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "outDir": "dist",
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "target": "es6",
-    "module": "commonjs",
+    "target": "esnext",
+    "module": "esnext",
     "sourceMap": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
