--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type":"module",
   "dependencies": {
     "commander": "^12.1.0",
     "dockerode": "^4.0.2",
