--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "env-paths": "^3.0.0",
     "figlet": "^1.7.0",
     "ora": "^8.0.1",
-    "pino": "^9.2.0"
+    "pino": "^9.2.0",
+    "prettyjson": "^1.2.5"
   },
   "devDependencies": {
     "@types/dockerode": "^3.3.29",
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.14.9",
+    "@types/prettyjson": "^0.0.33",
     "pino-pretty": "^11.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
