--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "bitbrew": "dist/bin/bitbrew.js"
+    "bitbrew": "dist/src/bin/bitbrew.js"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
