feat(docker): allow rpc traffic from any ip

--- a/docker/bitcoin.conf
+++ b/docker/bitcoin.conf
@@ -5,10 +5,11 @@ regtest=1
 # RPC settings
 rpcuser=user
 rpcpassword=pass
-rpcallowip=127.0.0.1
+rpcallowip=0.0.0.0/0
 
 # Network settings
 [regtest]
+rpcbind=0.0.0.0
 fallbackfee=0.0000001
 rpcport=18443
 port=18444
