--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ repo_url: https://github.com/rishkwal/bitbrew
 repo_name: rishkwal/bitbrew
 edit_uri: edit/main/docs/
 site_url: https://rishkwal.github.io/bitbrew
+site_description: A simple tool to craft private Bitcoin test networks
 
 plugins:
   - social
