--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ site_description: A simple tool to craft private Bitcoin test networks
 
 plugins:
   - social
+  - search
 
 nav:
   - Introduction: index.md
